# avc

./: .gitignore  Cargo.toml  README.md
ai/research/: spec.md
src/: cli.rs  config.rs  db.rs  git.rs  id.rs  main.rs  oplog.rs  output.rs  snapshot.rs  track.rs
src/commands/: change.rs  doctor.rs  history.rs  init.rs  log.rs  log_cmd.rs  mod.rs  redo.rs  restore.rs  run.rs  save.rs  snap.rs  stack.rs  status.rs  undo.rs  watch.rs
tests/: integration.rs
tests/common/: mod.rs
