[package]
name = "avc"
version = "0.1.0"
edition = "2024"
description = "Agent-native Git-compatible VCS CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.11.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
